--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
         <div id="title-box">
 
           <!-- Level 4 'PHARRELL WILLIAMS' Header -->
-
+          <header>PHARRELL WILLIAMS</header>
           <!-- Level 2 'HAPPY' Header -->
-
+          <header>HAPPY</header>
           <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
+          <header>| FROM DESPICABLE ME</header>
 
         </div>
       </div>
@@ -22,23 +23,23 @@
       <div id="back" class="album">
 
         <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
-
+        <header>| FROM DESPICABLE ME</header>
         <!-- Level 1 'HAPPY' Header -->
-
+        <header>HAPPY</header>
         <!-- Level 3 'WRITTEN BY...' Header -->
-
+        <header>WRITTEN BY PHARRELL WILLIAMS</header>
         <!-- pararaph text 'PUBLISHED BY...' -->
-
+         <P>PUBLISHED BY EMI APRIL MUSIC, INC. OBO ITSELF AND MORE WATERFROM NAZARETH (ASCAP) / UNIVERSAL PICTURES MUSIC (ASCAP) | BACKGROUND VOCALS PERFORMED BY RHEA DUMMETT, TREVON HENDERSON, ASHLEY L. LEE, SHAMIKA HIGHTOWER, JASMINE MURRAY AND TERRENCE ROLLE | PRODUCED BY PHARRELL WILLIAMS | RECORDED BY MIKE LARSON FOR I AM OTHER ENTERTAINMENT AT CIRCLE HOUSE STUDIOS, MIAMI, FL | ASSISTED BY MATTHEW DESRAMEAUX | DIGITAL EDITING AND ARRANGEMENT BY ANDREW COLEMAN AND MIKE LARSON FOR I AM OTHER ENTERTAINMENT | MIXED BY LESLIE BRATHWAITE AT MUSIC BOX STUDIOS, ATLANTA, GA.</P>
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
-
+         <span>PHARRELLWILLIAMS.COM</span>
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
-
+         <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png"alt="logo">
         <!-- span text 'COLUMBIARECORDS.COM' -->
-
+        <span>COLUMBIARECORDS.COM</span>
         <br>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
-
+        <img src="https://s3.amazonaws.com/learn-verified/sony-logo.png"alt="log">
       </div>
     </div>
   </body>
